# untangled

./: .cursorignore  .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  TODO.md  compose.yaml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/class-definitions/: change-request.yaml  demo-item.yaml  demo-link.yaml  incident.yaml  permission.yaml  refresh-token.yaml  role-permission.yaml  role.yaml  user-role.yaml  user.yaml
backend/src/untangled/: __init__.py  main.py
backend/src/untangled/auth/: __init__.py  dependencies.py  passwords.py  routes.py  schemas.py  settings.py  store.py  tokens.py
backend/src/untangled/mapping/: __init__.py  __main__.py  cli.py  definition.py  emit_pydantic.py  emit_zod.py  generate.py  naming.py  system_fields.py  types.py
backend/src/untangled/persistence/: __init__.py  actor.py  connection.py  ids.py  schema.py  search.py  sql_types.py  store.py
backend/src/untangled/rbac/: __init__.py  dependencies.py  keys.py  store.py
backend/src/untangled/records/: __init__.py  deps.py  locator.py  search_models.py  (+1 more)
backend/tests/: conftest.py  test_auth_api.py  test_auth_crypto.py  test_definition.py  test_friendly_id.py  test_friendly_id_persistence.py  test_generate.py  test_health.py  test_migrate.py  test_naming.py  test_persistence.py  test_rbac_api.py  test_rbac_helpers.py  test_rbac_store.py  test_records_paths.py  test_schema_cli.py  test_schema_diff.py  test_schema_ir.py  test_schema_yaml_introspect.py  test_search_api.py  test_tickets_api.py
backend/tests/helpers/: zod_validate.mjs
(+61 files in other folders)
